# word-duel-palace

./: .gitignore  Makefile  README.md
backend/: Makefile  README.md  main.py  pyproject.toml  words.txt  words.web2.bak.txt
backend/app/: __init__.py  config.py  factory.py  logging_config.py  services.py
backend/app/ai/: __init__.py  bot.py
backend/app/api/: __init__.py  routes.py
backend/app/auth/: __init__.py  identity.py
backend/app/jobs/: __init__.py  ticker.py
backend/app/match/: __init__.py  match.py  player.py
backend/app/matchmaking/: __init__.py  matchmaker.py
backend/app/persistence/: __init__.py  store.py
backend/app/realtime/: __init__.py  gateway.py  hub.py
backend/app/rules/: __init__.py  constants.py  dictionary.py  scoring.py  tiles.py
backend/tests/: test_app.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GAMEPLAY.md  PROTOCOL.md
frontend/: Makefile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  audio.js  dict.js  main.jsx  net.js  styles.css
frontend/src/animations/: combat.js  index.js  particles.js  tile.js  ui.js
frontend/src/components/: BattleLog.jsx  Character.jsx  Game.jsx  Home.jsx  HpBar.jsx  Lobby.jsx  Tile.jsx  TopBar.jsx
frontend/src/styles/: arena.css  base.css  home.css  lobby.css  tile.css  tokens.css  topbar.css
